# Projektseminar-Showcase

./: LICENSE  README.md  package-lock.json
backend/: .env  Cargo.toml
backend/migrations/2025-11-07-114926_create_comment/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Router.tsx  interface.ts  main.tsx
frontend/src/blog/: Blog.css  Blog.tsx  Blog_form.css  Blog_form.tsx  Blog_timeline.css  Blog_timeline.tsx
frontend/src/home/: Homepage.css  Homepage.tsx
frontend/src/menu/: Menu.css  Menu.tsx
