[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version ="4", features = ["openssl"] }
actix-files = "0.6.8"
openssl = { version = "0.10.68" }
serde = { version = "1.0", features = ["derive"] }
json = "0.12.4"
serde_json = "1.0"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
